# spond-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  check_event.py  pyproject.toml
skill/: SKILL.md
skill/references/: api-patterns.md  my-groups.md  my-venues.md
spond_mcp_server/: server.py
tests/: __init__.py  conftest.py  test_create_event.py  test_event_fields_integration.py
